# duff

./: .gitignore  AUTHORS  CHECKLIST  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  README  README.SHA  TODO  bootstrap.sh  configure.ac  duff.1  duff.c  duff.h  duffdriver.c  duffentry.c  duffstring.c  duffstring.h  duffutil.c  join-duplicates.sh  sha1.c  sha1.h  sha256.c  sha256.h  sha512.h
lib/: Makefile.am
m4/: ChangeLog
man/: Makefile.am  duff.1
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  en.po  sv.po
src/: Makefile.am  duff.c  duff.h  duffdriver.c  duffentry.c  dufffile.c  duffstring.c  duffstring.h  duffutil.c  sha384.c  sha384.h  sha512.c
